--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ html {
 body {
   display: grid;
   grid-template-rows: [nav-start] 10vh [nav-end hero-start] 90vh [hero-end benefits-start]max-content [benefits-end gen-start]max-content [gen-end program-start] max-content[program-end cta-start] max-content[cta-end footer-start] 10vh [footer-end];
+  overflow-x: hidden;
 }
 
 .nav {
@@ -43,7 +44,35 @@ body {
 }
 .hero {
   background-color: gray;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
 }
+
+.hero-content {
+  display: grid;
+  justify-items: center;
+  row-gap: 3rem;
+}
+
+.hero li:nth-child(1) {
+  width: 30rem;
+  height: 1rem;
+  background-color: white;
+}
+.hero li:nth-child(2) {
+  width: 40rem;
+  height: 1rem;
+  background-color: lightgray;
+}
+
+.hero li:nth-child(3) {
+  background-color: darkblue;
+  height: 4rem;
+  width: 12rem;
+}
+
 .benefits {
   background-color: #fdfdfd;
 }
