--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ li {
 }
 
 .benefits-box {
+  width: 100%;
   display: grid;
   grid-template-columns: 20% 1fr;
   grid-template-rows: repeat(3, 1fr);
@@ -116,24 +117,24 @@ li {
 
 .dark-line {
   background-color: darkgray;
-  width: 10rem;
+  width: 40%;
 }
 .grey-line--long,
 .grey-line--short {
   background-color: lightgray;
 }
 .grey-line--long {
-  width: 20rem;
+  width: 60%;
 }
 .grey-line--short {
-  width: 15rem;
+  width: 50%;
 }
 
 /* GET STARTED */
 
 .getstarted {
   background-color: rgba(228, 228, 228, 0.712);
-  padding: 3rem 8rem;
+  padding: 3rem;
 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -145,15 +146,6 @@ li {
   row-gap: 1.3rem;
 }
 
-.getstarted-content .dark-line {
-  width: 40%;
-}
-.getstarted-content .grey-line--long {
-  width: 60%;
-}
-.getstarted-content .grey-line--short {
-  width: 50%;
-}
 .getstarted-video {
   width: 100%;
   height: 100%;
@@ -168,6 +160,30 @@ li {
 /* PROGRAMS */
 .programs {
   background-color: #fdfdfd;
+  display: grid;
+  grid-template-rows: 10vh 1fr;
+  gap: 3rem;
+  padding: 5rem;
+}
+.programs .first-line {
+  align-self: center;
+  justify-self: center;
+}
+
+.programs-boxes {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5rem;
+  justify-content: center;
+}
+
+.programs-box {
+  display: grid;
+  row-gap: 1.3rem;
+}
+.programs-box .img {
+  width: 70%;
 }
 
 /* SIGN UP  */
