--- a/styles.css
+++ b/styles.css
@@ -28,15 +28,7 @@ li {
   align-items: center;
   justify-items: center;
 }
-@media only screen and (max-width: 500px) {
-  .nav-link {
-    display: none;
-  }
-  .nav li:last-of-type {
-    grid-column: 5 / 6;
-    grid-row: 1 / -1;
-  }
-}
+
 .link {
   height: 1rem;
   width: 8rem;
@@ -215,11 +207,44 @@ li {
   background-color: darkgray;
   padding: 3rem 5rem;
   display: grid;
+  gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
 }
 
 .footer-box {
   display: grid;
-  row-gap: 1rem;
+  gap: 0.5rem;
   align-content: center;
+}
+
+@media only screen and (max-width: 500px) {
+  .nav-link {
+    display: none;
+  }
+  .nav li:last-of-type {
+    grid-column: 5 / 6;
+    grid-row: 1 / -1;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .benefits {
+    grid-template-columns: 1fr;
+  }
+  .getstarted {
+    grid-template-columns: 1fr;
+    grid-template-rows: 20rem max-content;
+  }
+
+  .getstarted-video {
+    grid-row: 1 / 2;
+  }
+
+  .programs-boxes {
+    grid-template-columns: 1fr;
+  }
+
+  .footer {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
